[package]
name = "moondust-kernel"
version = "0.0.4"
authors = ["Vinay Chandra Dommeti <moondust@vinay.vc>"]
edition = "2018"

[dependencies]
lazy_static = { version = "1", features = ["spin_no_std"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
spin = "0.7"

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = "0.2.10"
x86_64 = "0.13.2"

[workspace]
members = [ ]
default-members = [ ]
